--- a/templates/user_information/edit.html.twig
+++ b/templates/user_information/edit.html.twig
@@ -99,7 +99,7 @@
                                         </div>
                                     </div>
                                     <div class="col-4">
-                                        <!--begin::کناری column-->
+                                        <!--begin::کناری column--><h1 
                                         <div class="card mb-4 shadow-sm">
                                                 <!--begin::Thumbnail settings-->
                                                         <!--begin::کارت header-->
