--- a/templates/default/front/article/show.html.twig
+++ b/templates/default/front/article/show.html.twig
@@ -12,14 +12,14 @@
                                 <div class="image-box">
                                     <figure class="image">
                                         {% if article.Image is not null and article.Image.path is not null and article.Image.name is not null %}
-                                             <img src="{{ article.Image.path ~ '/770x350_' ~ article.Image.name ~ '.webp' }}" alt="">
+                                             <img src=" {{ article.Image.path ~ '/770x350_' ~ article.Image.name ~ '.webp' }}" alt="">
                                         {% endif %}
                                     </figure>
                                 </div>
                                 <div class="lower-content">
                                     <ul class="post-info">
                                         <li><span class="far fa-user"></span> ادمین</li>
-                                        <li><span class="far fa-list-alt"></span><a href="blog-grid.html#">{{ article.Category.title }}</a></li>
+                                        <li><span class="far fa-list-alt"></span><a href="{{ path('articles_by_item', { entity : 'Article' ,item: 'category', itemtitle: article.Category.title }) }}">{{ article.Category.title }}</a></li>
                                         <li><span class="far fa-calendar"></span>{{ article.cdate|localizeddatetr('custom', 'none', 'fa_IR@calendar=persian', 'Asia/Tehran', null) }}</li>
                                     </ul>
                                     {{ article.text|raw }}
@@ -30,15 +30,15 @@
                         <!-- Other Options -->
                         <div class="post-share-options clearfix">
                             <div class="pull-left">
-                                <p>Tags : </p>
+                                <p>برچسب ها : </p>
                                 <ul class="tags">
                                     {% for barchasb in article.barchasbs %}
-                                    <li><a href="blog-detail.html#">{{ barchasb.title }}</a>,</li>
+                                    <li><a href="{{ path( 'articles_by_item', {'entity': 'Article','item': 'barchasb', 'itemtitle': barchasb.title} ) }}">{{ barchasb.title }}</a></li>
                                     {% endfor %}
                                 </ul>
                             </div>
                             <div class="pull-right">
-                                <p>Follow Us : </p>
+                                <p>مارو دنبال کنید: </p>
                                 <ul class="social-icon">
                                     <li><a href="blog-detail.html#"><span class="fab fa-facebook"></span></a></li>
                                     <li><a href="blog-detail.html#"><span class="fab fa-whatsapp"></span></a></li>
@@ -48,89 +48,63 @@
                                 </ul>
                             </div>
                         </div>
-
-                        <!-- Author Box -->
-                        <div class="author-box">
-                            <div class="inner-box clearfix">
-                                <div class="thumb"><img src="images/resource/author-thumb.jpg" alt=""></div>
-                                <h4 class="name">About The Theodore</h4>
-                                <div class="text">Dynamically innovate resource and leveling customer service for state of the art customer service.</div>
-                                <ul class="social-icon">
-                                    <li><a href="blog-detail.html#"><i class="fab fa-facebook"></i></a></li>
-                                    <li><a href="blog-detail.html#"><i class="fab fa-google-plus-g"></i></a></li>
-                                    <li><a href="blog-detail.html#"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="blog-detail.html#"><i class="fab fa-pinterest"></i></a></li>
-                                    <li><a href="blog-detail.html#"><i class="fab fa-youtube"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-
-
                         <!-- Comments Area -->
                         <div class="comments-area">
-                            <div class="group-title">
-                                <h3>03 Comments</h3>
-                            </div>
-                            <div class="comment-box">
-                                <div class="comment">
-                                    <div class="author-thumb"><img src="images/resource/avatar-1.jpg" alt=""></div>
-                                    <div class="comment-info">
-                                        <div class="name">Steven Rich</div>
-                                        <div class="date">JAN 01, 2019</div>
-                                    </div>
-                                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aliquet tempor tempor. Pellentesque facilisis, ligula ut porta lobortis.</div>
-                                    <a href="blog-detail.html#" class="reply-btn">Reply</a>
-                                </div>
-                            </div>
-
-                            <div class="comment-box reply-comment">
-                                <div class="comment">
-                                    <div class="author-thumb"><img src="images/resource/avatar-2.jpg" alt=""></div>
-                                    <div class="comment-info">
-                                        <div class="name">Donal Smith</div>
-                                        <div class="date">1 hours ago</div>
-                                    </div>
-                                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aliquet tempor tempor. Pellentesque facilisis, ligula ut porta.</div>
-                                    <a href="blog-detail.html#" class="reply-btn">Reply</a>
-                                </div>
-                            </div>
-
-                            <div class="comment-box">
-                                <div class="comment">
-                                    <div class="author-thumb"><img src="images/resource/avatar-3.jpg" alt=""></div>
-                                    <div class="comment-info">
-                                        <div class="name">Rona Stove</div>
-                                        <div class="date">2 hours ago</div>
-                                    </div>
-
-                                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aliquet tempor tempor. Pellentesque facilisis, ligula ut porta lobortis.</div>
-                                    <a href="blog-detail.html#" class="reply-btn">Reply</a>
-                                </div>
-                            </div>
-                        </div>
-
                         <!--Comment Form-->
                         <div class="comment-form">
                             <div class="group-title">
-                                <h3>Add Your Comments</h3>
+                                <h3>نظر خود را اضافه کنید</h3>
                             </div>
-                            <form method="post" action="blog.html">
-                                <div class="form-group">
-                                    <input type="text" name="username" placeholder="Name" required="">
+                            <form method="post" action="{{ path('app_add_message',{'entity' : 'Article'}) }}">
+                                <div class="row">
+                                    <div class="form-group col-6">
+                                        <p class="pb-2">:نام و نام خانوادگی</p>
+                                        <input type="text" name="fullName" placeholder="نام و نام خانوادگی خوپ را وارد کنید" required="">
+                                    </div>
+                                    <input type="hidden" name="article" value="{{ article.id }}">
+                                    <div class="form-group col-6">
+                                        <p class="pb-2">:آدرس ایمیل</p>
+                                        <input type="email" name="email" placeholder="آدرس ایمیل حود را وارد کنید" required="">
+                                    </div>
                                 </div>
 
                                 <div class="form-group">
-                                    <input type="email" name="email" placeholder="Email" required="">
+                                    <textarea name="text" placeholder="نوشته خود را بنویسید" required=""></textarea>
                                 </div>
-
+                                <input type="hidden" name="type" value="1">
                                 <div class="form-group">
-                                    <textarea name="message" placeholder="Your Comments"></textarea>
-                                </div>
-
-                                <div class="form-group">
-                                    <button class="theme-btn btn-style-one" type="submit" name="submit-form"><span class="btn-title">Post Comment</span> </button>
+                                    <button class="theme-btn btn-style-one" type="submit" name="submit-form"><span class="btn-title">ثبت نظر</span> </button>
                                 </div>
                             </form>
+                        </div>
+                            <div class="group-title">
+                                <h3>نظرات ثبت شده</h3>
+                            </div>
+                            {% for item in findEntitiesWithCriteria('App\\Entity\\Comment',null, {'published': '1', 'type': '1', 'article': article.id}) %}
+                                <div class="comment-box">
+                                    <div class="comment">
+                                        <div class="author-thumb"><img src="{{ asset('front/images/user.jpg') }}" alt=""></div>
+                                        <div class="comment-info">
+                                            <div class="name">{{ item.fullname }}</div>
+                                            <div class="date">{{ item.cdate|localizeddatetr('custom', 'none', 'fa_IR@calendar=persian', 'Asia/Tehran', null) }}</div>
+                                        </div>
+                                        <div class="text">{{ item.text }}</div>
+{#                                        <a href="blog-detail.html#" class="reply-btn">Reply</a>
+#}                                    </div>
+                                </div>
+
+{#                                <div class="comment-box reply-comment">
+                                    <div class="comment">
+                                        <div class="author-thumb"><img src="images/resource/avatar-2.jpg" alt=""></div>
+                                        <div class="comment-info">
+                                            <div class="name">Donal Smith</div>
+                                            <div class="date">1 hours ago</div>
+                                        </div>
+                                        <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis aliquet tempor tempor. Pellentesque facilisis, ligula ut porta.</div>
+                                        <a href="blog-detail.html#" class="reply-btn">Reply</a>
+                                    </div>
+                                </div>#}
+                            {% endfor %}
                         </div>
                     </div>
                 </div>
