speed up and some bugs 	modified:   src/Controller/DefaultController.php 	modified:   src/Service/Service.php 	modified:   src/Twig/Extension/TwigExtension.php 	modified:   templates/article/edit.html.twig 	modified:   templates/article/new.html.twig 	modified:   templates/category/edit.html.twig 	modified:   templates/category/new.html.twig 	modified:   templates/comment/index.html.twig 	modified:   templates/product/edit.html.twig 	modified:   templates/product/new.html.twig

--- a/templates/article/edit.html.twig
+++ b/templates/article/edit.html.twig
@@ -116,7 +116,7 @@
                                                                 {% if article.category is not null %}
                                                                     <option selected="" value="{{ article.category.id }}">{{ article.category.title }}</option>
                                                                 {% endif %}
-                                                                {% for category in getCategory(2)  %}
+                                                                {% for category in findEntitiesWithCriteria('App\\Entity\\Category', null, {'type': '2'}) %}
                                                                     <option value="{{ category.id }}">{{ category.title }}</option>
                                                                 {% endfor %}
                                                             </select>
