--- a/templates/article/new.html.twig
+++ b/templates/article/new.html.twig
@@ -186,7 +186,7 @@
                                                             <!--end::Tags-->
                                                             <!--begin::انتخاب2-->
                                                             <select name="category" class="form-select mb-2" data-control="select2" data-placeholder="انتخاب ">
-                                                                {% for category in getCategory(2)  %}
+                                                                {% for category in findEntitiesWithCriteria('App\\Entity\\Category', null, {'type': '2'})  %}
                                                                     <option value="{{ category.id }}">{{ category.title }}</option>
                                                                 {% endfor %}
                                                             </select>
