--- a/templates/category/edit.html.twig
+++ b/templates/category/edit.html.twig
@@ -145,13 +145,23 @@
                                                     <!--end::کارت header-->
                                                     <!--begin::کارت body-->
                                                     <div class="card-body pt-0">
+                                                            <!--begin::Tags-->
+                                                            <label class="form-label">دسته بندی برای</label>
+                                                            <!--end::Tags-->
+                                                            <!--begin::انتخاب2-->
+                                                            <select name="categorytype" class="form-select "  data-placeholder="انتخاب">
+                                                                <option value="1">محصولات</option>
+                                                                <option value="2">مقالات</option>
+                                                            </select>
+                                                            <!--end::انتخاب2-->
+                                                            <!--begin::Tags-->                                                        
                                                             <!--begin::Input group-->
                                                             <!--begin::Tags-->
                                                             <label class="form-label">دسته بندی ها</label>
                                                             <!--end::Tags-->
                                                             <!--begin::انتخاب2-->
                                                             <select name="category1" class="form-select "  data-placeholder="انتخاب">
-                                                                {% for category in getCategory(null) %}
+                                                                {% for category in findEntitiesWithCriteria('App\\Entity\\Category', null, null) %}
                                                                     <option value="{{ category.id }}">{{ category.title }}</option>
                                                                 {% endfor %}
                                                             </select>
