faq admin panel

--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -153,6 +153,7 @@
                                                             <select name="categorytype" class="form-select "  data-placeholder="انتخاب">
                                                                 <option value="1">محصولات</option>
                                                                 <option value="2">مقالات</option>
+                                                                <option value="3">سوال و جواب</option>
                                                             </select>
                                                             <!--end::انتخاب2-->
                                                             <!--begin::Tags-->
